[package]
name = "volcano-sfu"
version = "0.3.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
async-trait = "0.1.83"
tokio = { version = "1.37.0", features = ["full"] }

anyhow = "1.0.82"
byteorder = "1.5.0"
bytes = "1.6.0"
dashmap = "6.1.0"
lazy_static = "1.4.0"
log = "0.4.21"
postage = "0.5.0"
rand = "0.8.5"
regex = "1.10.4"
ulid = "1.1.2"

# Error
thiserror = "1.0.58"

# Serde
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

# WebRTC
webrtc = "0.13.0"

toml = "0.8.19"
